# pi-bt-bridge

./: .gitignore  AGENTS.md  Makefile  README.md  config.example.json  pyproject.toml  requirements.txt
.gitea/workflows/: ci.yaml
.specify/memory/: constitution.md
docs/: api.md  configuration.md  development.md  installation.md  web-interface.md
scripts/: bridge_log.py  bt-pair.sh  build-wheels.sh  configure.sh  debug-ble.sh  deploy.sh  install.sh  test-ble-advert.py
specs/001-bt-bridge-daemon/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-bt-bridge-daemon/contracts/: ble-gatt.md  kiss-framing.md  spp-profile.md
specs/002-web-pairing-interface/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/002-web-pairing-interface/contracts/: api.md
specs/003-tnc-radio-history/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-tnc-radio-history/contracts/: api.md
specs/004-tcp-kiss-server/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-tcp-kiss-server/contracts/: tcp-kiss-protocol.md  web-api-extensions.md
src/: __init__.py  config.py  main.py
src/models/: __init__.py  connection.py  hdlc.py  kiss.py  state.py  tnc_history.py
src/services/: __init__.py  ble_service.py  bridge.py  classic_service.py  pairing_agent.py  scanner_service.py  tcp_kiss_service.py  web_service.py
src/util/: __init__.py  logging.py
src/web/: __init__.py  models.py
src/web/static/: style.css
src/web/templates/: _log_panel.html  base.html  logs.html  pairing.html  settings.html  stats.html  status.html
systemd/: bluetooth-unblock.service  bt-bridge.service
tests/: __init__.py  conftest.py
tests/contract/: test_ble_gatt.py  test_kiss_framing.py  test_spp_profile.py  test_tcp_kiss_framing.py
tests/integration/: test_bridge_flow.py  test_history_api.py  test_reconnection.py  test_tcp_bridge.py
tests/unit/: test_config.py  test_hdlc.py  test_kiss_parser.py  test_state_machine.py  test_tcp_kiss_service.py  test_tnc_history.py
